--- a/complexity/forjava/2_cognitive_complexity_2021.ipynb
+++ b/complexity/forjava/2_cognitive_complexity_2021.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,31 +29,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "p = os.path.abspath('..')\n",
+    "pp = os.path.abspath('../..')\n",
+    "sys.path.insert(1, p)\n",
+    "sys.path.insert(1, pp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'preprocess'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#customized preprocessing pkg\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpreprocess\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'preprocess'"
+     ]
+    }
+   ],
    "source": [
     "#customized preprocessing pkg\n",
     "import preprocess as pp\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pickle\n",
-    "import ast\n",
-    "from cognitive_complexity.api import get_cognitive_complexity\n",
-    "import pprint\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker\n",
-    "# https://joaorafaelm.github.io/notebook/python/2021/04/10/cognitive-complexity.html"
+    "# https://joaorafaelm.github.io/notebook/python/2021/04/10/cognitive-complexity.html\n",
+    "import config.config as conf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "input_year = '2021'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_pl = 'java'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(conf.DATA_PATH)"
    ]
   },
   {
@@ -70,8 +111,8 @@
    "outputs": [],
    "source": [
     "# 파일 불러오기\n",
-    "with open(f'../../data/complexity_python_df_{input_year}.pkl', 'rb') as f:\n",
-    "    complexity_python_df = pickle.load(f)"
+    "with open(f'{conf.DATA_PATH}/data/complexity_{input_pl}_df_{input_year}.pkl', 'rb') as f:\n",
+    "    complexity_java_df = pickle.load(f)"
    ]
   },
   {
@@ -80,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "complexity_python_df['cdate'].max()"
+    "complexity_java_df['cdate'].max()"
    ]
   },
   {
@@ -89,12 +130,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "complexity_python_df['cdate'].max()"
+    "complexity_java_df['cdate'].max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,11 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "complexity_python_df['c_h_body'] = complexity_python_df['body'].apply(lambda x : htmlp.clean_html_str(x))"
+    "complexity_java_df['c_h_body'] = complexity_java_df['body'].apply(lambda x : htmlp.clean_html_str(x))"
    ]
   },
   {
@@ -117,16 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "complexity_python_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "complexity_python_df['c_body'] = complexity_python_df['body'].apply(lambda x : codep(x))"
+    "complexity_java_df.info()"
    ]
   },
   {
@@ -135,16 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "complexity_python_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "complexity_python_src = complexity_python_df[['id', 'c_body']]"
+    "complexity_java_df['c_body'] = complexity_java_df['body'].apply(lambda x : codep(x))"
    ]
   },
   {
@@ -153,16 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "complexity_python_src['code_len'] = complexity_python_src['c_body'].apply(lambda x: len(x['code_sections']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "complexity_python_src = complexity_python_src[complexity_python_src['code_len']>0]"
+    "complexity_java_df"
    ]
   },
   {
@@ -171,25 +185,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "complexity_python_src.head(5)"
+    "complexity_java_src = complexity_java_df[['id', 'c_body']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complexity_java_src['code_len'] = complexity_java_src['c_body'].apply(lambda x: len(x['code_sections']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complexity_java_src = complexity_java_src[complexity_java_src['code_len']>0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complexity_java_src.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "src_df = pd.DataFrame(columns = ['id', 'src'])\n",
     "def code_explode(row) : \n",
     "    global src_df\n",
-    "    row['id']\n",
     "    src_arr = []\n",
     "    for i in range(row['code_len']):\n",
-    "        tmp_src_arr = []\n",
-    "        tmp_src_arr.append(row['id'])\n",
-    "        tmp_src_arr.append(row['c_body']['code_sections'][i]['span_str'])\n",
-    "        src_df = src_df.append(pd.Series(tmp_src_arr, index=src_df.columns), ignore_index=True)\n",
+    "        new_rows = pd.DataFrame({'id': [row['id']], 'src': [row['c_body']['code_sections'][i]['span_str']]})\n",
+    "        src_df = pd.concat([src_df, new_rows], axis=0)\n",
+    "\n",
     "    return True\n",
     "        "
    ]
@@ -201,16 +240,38 @@
    "outputs": [],
    "source": [
     "# bert_src_ex = bert_src[['q_id', 'q_prep_text']].apply(pd.Series.explode)\n",
-    "complexity_python_src.apply(code_explode, axis = 1)"
+    "complexity_java_src.apply(code_explode, axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_df.reset_index(inplace=True)"
+    "src_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -231,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,14 +300,14 @@
     "    idx = src_df.iloc[i, 0]\n",
     "    qid = src_df.iloc[i, 1]\n",
     "    src = src_df.iloc[i, 2]\n",
-    "    file_nm = str(idx)+'_' + str(qid)+'.py'\n",
-    "    with open(f'../../data/src/{input_year}_src/{file_nm}', 'wb') as f:\n",
+    "    file_nm = str(idx)+'_' + str(qid)+'.java'\n",
+    "    with open(f'{conf.DATA_PATH}/data/src/{input_year}_{input_pl}_src/{file_nm}', 'wb') as f:\n",
     "        f.write(src.encode())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,11 +352,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = f'../../data/src/{input_year}_excel/'\n",
+    "path = f'{conf.DATA_PATH}/data/src/{input_year}_excel/'\n",
     "file_list = os.listdir(path)\n",
     "file_list_csv = [file for file in file_list if file.endswith(\".csv\")]\n",
     "\n",
@@ -304,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,58 +377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Path</th>\n",
-       "      <th>File Name</th>\n",
-       "      <th>Cognitive Complexity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Path, File Name, Cognitive Complexity]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "calc_com_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
