--- a/complexity/0_data_extract.ipynb
+++ b/complexity/0_data_extract.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys, os\n",
     "p = os.path.abspath('..')\n",
-    "# p = p+r'\\config'\n",
-    "sys.path.insert(1, p)"
+    "pp = os.path.abspath('../..')\n",
+    "sys.path.insert(1, p)\n",
+    "sys.path.insert(1, pp)"
    ]
   },
   {
@@ -73,12 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_df.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_df.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -135,12 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_python_df_2021.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_python_df_2021.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -197,12 +198,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_java_df_2021.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_java_df_2021.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -266,12 +267,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_rust_df_2021.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_rust_df_2021.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -328,12 +329,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_python_df_2022.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_python_df_2022.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -397,12 +398,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_java_df_2022.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_java_df_2022.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -466,12 +467,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_rust_df_2022.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_rust_df_2022.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -534,12 +535,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_python_df_2023.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_python_df_2023.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -595,12 +596,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_java_df_2023.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_java_df_2023.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -663,12 +664,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_rust_df_2023.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_rust_df_2023.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -688,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,12 +726,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open('../../data/complexity_src_df.pkl', 'wb') as f:\n",
+    "with open(f'{conf.DATA_PATH}/data/complexity_src_df.pkl', 'wb') as f:\n",
     "    pickle.dump(df, f)\n"
    ]
   },
@@ -744,7 +745,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_stackoverflow_src",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
