--- a/complexity/forjava/2_cognitive_complexity_2022.ipynb
+++ b/complexity/forjava/2_cognitive_complexity_2022.ipynb
@@ -154,12 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "htmlp = pp.HTMLParser()\n",
-    "codep = pp.CodeSectionParser()"
+    "codep = pp.CodeSectionParser()\n",
+    "\n",
+    "#ddd"
    ]
   },
   {
