--- a/DA/1_visualization.ipynb
+++ b/DA/1_visualization.ipynb
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -709,6 +709,7 @@
     "axs[1].bar(df_qna_num[df_qna_num['posttypeid'] =='2'].date\n",
     "        ,  df_qna_num[df_qna_num['posttypeid'] =='2'].id\n",
     "        ,  color = 'lightgreen'\n",
+    "        , alpha=0.7\n",
     "        # ,  edgecolor = 'black'\n",
     "      ) # hist type\n",
     "\n",
@@ -5380,7 +5381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
