--- a/LLM/1_acc_test.ipynb
+++ b/LLM/1_acc_test.ipynb
@@ -567,8 +567,49 @@
     }
    ],
    "source": [
-    "from ollama import chat\n",
-    "help(chat)"
+    "from multiprocessing import Process\n",
+    "    \n",
+    "def task(llm_model, few_shot_n, test_n, q_src_yn, ver, p_ver, sc_num, temperature):\n",
+    "\n",
+    "    print(f\"Task {llm_model}_{few_shot_n}_{test_n}_{q_src_yn}_{p_ver}_{sc_num}_{temperature} 시작\")\n",
+    "    for i in range(ver):\n",
+    "        print(f\"Task {llm_model}_{few_shot_n}_{test_n}_{q_src_yn}_{p_ver}_{sc_num}_{temperature} 실행 중: {i}\")\n",
+    "        sc.Self_Consistency(  llm_model\n",
+    "                        , few_shot_n\n",
+    "                        , test_n\n",
+    "                        , q_src_yn\n",
+    "                        , i\n",
+    "                        , p_ver\n",
+    "                        , sc_num\n",
+    "                        , temperature\n",
+    "                        )  \n",
+    "    \n",
+    "    print(f\"Task {llm_model}_{few_shot_n}_{test_n}_{q_src_yn}_{p_ver}_{sc_num} 완료\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # process1 = Process(target=task, args=('l', 1, 10, 'Y', 10, 'sys_prompt7', 5))\n",
+    "    # process2 = Process(target=task, args=('l', 1, 10, 'N', 10, 'sys_prompt7', 5))\n",
+    "\n",
+    "    process3 = Process(target=task, args=('c', 3, 10, 'Y', 5, 'sys_prompt8', 5, 0.01))\n",
+    "    # process4 = Process(target=task, args=('l', 2, 10, 'N', 10, 'sys_prompt7', 5))\n",
+    "\n",
+    "    # process5 = Process(target=task, args=('l', 3, 10, 'Y', 10, 'sys_prompt7', 5))\n",
+    "    # process6 = Process(target=task, args=('l', 3, 10, 'N', 10, 'sys_prompt7', 5))\n",
+    "    \n",
+    "    # process1.start()\n",
+    "    # process2.start()\n",
+    "    process3.start()\n",
+    "    # process4.start()\n",
+    "    # process5.start()\n",
+    "    # process6.start()\n",
+    "    \n",
+    "    # process1.join()\n",
+    "    # process2.join()\n",
+    "    process3.join()\n",
+    "    # process4.join()\n",
+    "    # process5.join()\n",
+    "    # process6.join()\n",
+    "    print(\"모든 작업 완료\")\n"
    ]
   },
   {
