--- a/matters_arising/Fig3.ipynb
+++ b/matters_arising/Fig3.ipynb
@@ -1677,7 +1677,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv_stackoverflow_src",
    "language": "python",
    "name": "python3"
   },
@@ -1691,7 +1691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
