--- a/LLM/2_calculate_acc.ipynb
+++ b/LLM/2_calculate_acc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,13 @@
     "    file_list = os.listdir(path)\n",
     "    opt_file = [x for x in file_list if x.startswith(f'sc_{llm_model}_result_{few_shot_n}_{test_n}_{q_src_yn}_{ver}_{p_ver}_{sc_num}_{temp}_{excel_ver}')]\n",
     "    opt_file = [x for x in opt_file if x.endswith(f'.csv')]\n",
+    "\n",
     "    df = pd.DataFrame()\n",
+    "\n",
+    "\n",
+    "    # pattern = re.compile(r'.*_[0-9]\\.csv$')\n",
+    "    # opt_file = [x for x in opt_file if pattern.match(x)]\n",
+    "    \n",
     "    \n",
     "    if len(opt_file)>0 : \n",
     "        for f in opt_file:\n",
@@ -80,51 +86,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_61.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_35.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_29.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_58.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_77.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_49.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_84.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_36.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_25.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_53.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_55.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_40.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_85.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_5.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_57.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_70.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_37.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_83.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_68.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_26.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_42.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_89.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_12.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_20.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_51.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_80.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_62.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_44.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_13.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_86.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_79.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_59.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_56.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_22.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_1.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_47.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_65.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_81.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_54.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_63.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_21.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_46.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_34.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_27.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_4.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_10.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_67.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_0.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_52.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_38.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_78.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_71.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_30.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_8.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_88.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_64.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_69.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_39.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_45.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_72.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_48.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_66.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_11.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_73.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_9.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_32.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_50.csv\n",
@@ -133,19 +165,25 @@
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_19.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_23.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_7.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_87.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_24.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_82.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_31.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_43.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_18.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_76.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_33.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_3.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_17.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_74.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_16.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_60.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_14.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_28.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_41.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_75.csv\n",
       "sc_l_result_4_30_Y_100_sys_prompt9_5_0.01_ver3_6.csv\n",
-      "l_result_4_30_Y :  74.337899543379\n"
+      "l_result_4_30_Y :  76.55719139297848\n"
      ]
     }
    ],
@@ -156,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[73.68421052631578, 76.66666666666667, 76.92307692307693, 71.42857142857143, 60.0, 82.35294117647058, 85.71428571428571, 82.35294117647058, 82.35294117647058, 80.0, 80.95238095238095, 58.82352941176471, 82.6086956521739, 75.0, 68.75, 76.92307692307693, 63.63636363636363, 67.85714285714286, 78.94736842105263, 65.21739130434783, 70.83333333333334, 75.0, 60.0, 82.6086956521739, 80.95238095238095, 82.6086956521739, 73.91304347826086, 77.77777777777779, 73.33333333333333, 66.66666666666666, 73.68421052631578, 63.63636363636363, 85.71428571428571, 69.56521739130434, 80.0, 66.66666666666666, 70.83333333333334, 75.0, 62.5, 70.58823529411765, 81.48148148148148, 64.70588235294117, 76.47058823529412, 72.72727272727273, 82.6086956521739, 80.0, 73.91304347826086, 87.5, 81.25, 81.25, 76.47058823529412, 66.66666666666666, 61.111111111111114, 80.0, 69.23076923076923, 80.0, 63.1578947368421, 69.56521739130434]\n"
+      "[69.23076923076923, 90.0, 72.0, 63.1578947368421, 82.35294117647058, 92.85714285714286, 66.66666666666666, 70.58823529411765, 73.33333333333333, 76.47058823529412]\n"
      ]
     }
    ],
@@ -173,9 +211,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_16.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_84.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_0.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_10.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_64.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_35.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_72.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_2.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_12.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_74.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_62.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_54.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_32.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_45.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_18.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_86.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_15.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_33.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_3.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_88.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_98.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_99.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_69.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_11.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_40.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_31.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_52.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_28.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_94.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_77.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_20.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_87.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_44.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_71.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_57.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_58.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_24.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_75.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_19.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_38.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_22.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_1.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_90.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_73.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_78.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_93.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_82.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_26.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_42.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_17.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_30.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_13.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_91.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_59.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_34.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_97.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_8.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_80.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_9.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_41.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_5.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_14.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_53.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_29.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_66.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_56.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_83.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_48.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_36.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_43.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_55.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_7.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_92.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_25.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_81.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_60.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_21.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_39.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_61.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_95.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_49.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_67.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_65.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_46.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_37.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_63.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_23.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_27.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_50.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_79.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_68.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_76.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_51.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_96.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_6.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_70.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_89.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_85.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_4.csv\n",
+      "sc_l_result_4_30_Y_100_sys_prompt8_5_0.01_ver2_47.csv\n",
+      "l_result_4_30_Y :  83.52098259979529\n"
+     ]
+    }
+   ],
    "source": [
     "# sc_calc_acc_condition_with_temp_with_sc('l', 4, 15, 'Y', 30, 'sys_prompt8', 5,  0.01, 'ver1')\n",
     "# # process3 = Process(target=task, args=('l', 4, 15, 'Y', 30, 'sys_prompt8', 3, 0.01, 'ver1'))\n",
@@ -185,9 +331,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83.67379071062875"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.mean(acc_list)"
    ]
