--- a/complexity/forpython/4_cognitive_complexity_discontinuity_ver1.ipynb
+++ b/complexity/forpython/4_cognitive_complexity_discontinuity_ver1.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "평균으로 discontinuity 확인"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
