--- a/ic2s2/0_data_extract.ipynb
+++ b/ic2s2/0_data_extract.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
     "     on a.id = b.id \\\n",
     "     left outer join vw_posts_get_answer as c \\\n",
     "     on a.id = c.id \\\n",
-    "where a.creationdate between '2013-11-01' and '2023-12-01' \\\n",
+    "where a.creationdate between '2021-11-01' and '2023-12-01' \\\n",
     "  ; \\\n",
     "                \" \n",
     "   )\n",
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_body = pd.DataFrame(rows, columns = [\n",
+    "df_body_bfgpt = pd.DataFrame(rows, columns = [\n",
     "  'creationdate' \n",
     ", 'id' \n",
     ", 'posttypeid'\n",
@@ -228,8 +228,8 @@
    "outputs": [],
    "source": [
     "# 전체 데이터셋 \n",
-    "with open(f'{conf.DATA_PATH}/data/df_body.pkl', 'wb') as f:\n",
-    "    pickle.dump(df_body, f)"
+    "with open(f'{conf.DATA_PATH}/data/df_body_bfgpt.pkl', 'wb') as f:\n",
+    "    pickle.dump(df_body_bfgpt, f)"
    ]
   },
   {
