--- a/LLM/3_visualization_sample_ver3.ipynb
+++ b/LLM/3_visualization_sample_ver3.ipynb
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1370,6 +1370,7 @@
     "\n",
     "fig.tight_layout()\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
+    "fig.savefig(\"difficulty_level_chow_ver3.png\", dpi=300, bbox_inches='tight')  # DPI 설정 및 여백 최소화\n",
     "plt.show();"
    ]
   },
