--- a/thesis/3_visualization_sample_ver4 copy.ipynb
+++ b/thesis/3_visualization_sample_ver4 copy.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = f'../LLM/result/'\n",
+    "path = f'./result/'\n",
     "file_list = os.listdir(path)"
    ]
   },
